--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<!--<html lang="ko" xmlns:th="http://www.thymeleaf.org">-->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>게시판 페이지</title>
 </head>
 <body>
-    <header th:replace="~{header :: header}"></header>
+<!--    <header th:replace="~{header :: header}"></header>-->
+    <header id="header"></header>
 
     <main>
         <form>
@@ -65,7 +67,8 @@
             </table>
         </nav>
     </main>
-    <footer th:replace="footer :: footer"></footer>
+<!--    <footer th:replace="footer :: footer"></footer>-->
+    <footer id="footer"></footer>
 
 </body>
 </html>
