spring boot 3.대로 변경.

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,11 +2,11 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Header template</title>
+    <title>Header template test</title>
 </head>
 <body>
     <header>
-        header 삽입부
+        header 삽입부 aaa
         <hr>
     </header>
 </body>
